CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/NotificacionPorMasterBase__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Notificaciones de los casos para enviar correo a los clientes de portabilidad financiera a través de MasterBase</description>
    <label>NotificacionPorMasterBase</label>
</CustomObject>