CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/Adjunto__c.field-meta.xml
<CustomField>
    <fullName>Adjunto__c</fullName>
    <label>Adjunto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>