CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/Campos_Plantilla__c.field-meta.xml
<CustomField>
    <fullName>Campos_Plantilla__c</fullName>
    <label>Campos Plantilla</label>
    <length>255</length>
    <type>Text</type>
</CustomField>