CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/Cliente_Apto__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Apto__c</fullName>
    <label>Cliente Apto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>