CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/Estado_Previo__c.field-meta.xml
<CustomField>
    <fullName>Estado_Previo__c</fullName>
    <label>Estado Previo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>