CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/FromId__c.field-meta.xml
<CustomField>
    <fullName>FromId__c</fullName>
    <description>Codigo del  correo From</description>
    <label>FromId</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>