CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/FromMail__c.field-meta.xml
<CustomField>
    <fullName>FromMail__c</fullName>
    <description>Registra el mail de remitente. El valor definido es: consorio.informa@consorcio.cl</description>
    <label>From Mail</label>
    <type>Email</type>
</CustomField>