CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <description>Registro de emisor del envío de mail por defecto: Consorcio Informa</description>
    <label>From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>