CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/ID_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>ID_Notificacion__c</fullName>
    <label>ID Notificacion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>