CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/Nombre_Adjunto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Adjunto__c</fullName>
    <label>Nombre Adjunto</label>
    <length>200</length>
    <type>Text</type>
</CustomField>