CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/Plantilla__c.field-meta.xml
<CustomField>
    <fullName>Plantilla__c</fullName>
    <label>Plantilla</label>
    <length>255</length>
    <type>Text</type>
</CustomField>