CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/Sub_Estado__c.field-meta.xml
<CustomField>
    <fullName>Sub_Estado__c</fullName>
    <label>Sub Estado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>