CNSDEVCOLECT/force-app/main/default/objects/NotificacionPorMasterBase__c/fields/SubTipo__c.field-meta.xml
<CustomField>
    <fullName>SubTipo__c</fullName>
    <label>SubTipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>